[project]
name = "ragless-dev"
version = "0.1.0"
description = "rag dev without ChromaDB — file-based RAG with LangGraph"
authors = [
    {name = "jackdafox", email = "83963164+jackdafox@users.noreply.github.com"}
]
requires-python = "^3.11"
dependencies = [
    "langgraph>=1.1.6",
    "langchain-core>=1.2.25",
    "langchain-openai>=1.1.12",
    "tree-sitter-python>=0.21.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pip-audit>=2.7.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pip-audit = "^2.7.0"
